all HTTP methods working for steps. Swagger file updated
